moved images to public

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -28,7 +28,7 @@
     ================================================== -->
     <div class="row heading">
       <div class="col-md-12">
-        <img height="175px" width="190px" class="my-picture" src="assets/viksit.jpg" alt="Photo of Viksit Arora">
+        <img height="175px" width="190px" class="my-picture" src="viksit.jpg" alt="Photo of Viksit Arora">
         <h1 class="my-name">Viksit Arora</h1>
         <h2 class="my-profession">Web Developer<a class="github-link" href=""><i class="fa fa-github"></i>enliven-</a></h2>
         <p class="my-message">An ambitious problem solver with a passion for web application development. Having worked as a freealnce software developer for the last few years, I have developed the requisite expertise to design and execute complex software projects for a diverse variety of users. I am a pretty positive person, and absolutely love traveling and teaching!</p>
@@ -227,7 +227,7 @@
       <div class="col-md-4 portfolio-item masonry-brick">
         <div class="portfolio-details">
           <h4>task-it</h4>
-          <img width="250px" height="" src="assets/taskit.png" alt="image description">
+          <img width="250px" height="" src="taskit.png" alt="image description">
           <p>task-it is place to list and grab tasks for money or other favors amongst closed knit communities. Building a mvp for a friend.</p>
         </div>
       </div>
@@ -235,7 +235,7 @@
       <div class="col-md-4 portfolio-item masonry-brick">
         <div class="portfolio-details">
           <h4>bhushan-delivers</h4>
-          <img width="250px" height="" src="assets/bhushandelivers.png" alt="image description">
+          <img width="250px" height="" src="bhushandelivers.png" alt="image description">
           <p>Building a cool interface for grocery shopping experience that mostly entails getting things on a list.</p>
         </div>
       </div>
@@ -243,7 +243,7 @@
       <div class="col-md-4 portfolio-item masonry-brick">
         <div class="portfolio-details">
           <h4>translatr</h4>
-          <img width="250px" height="" src="assets/translatr.png" alt="image description">
+          <img width="250px" height="" src="translatr.png" alt="image description">
           <p>translatr is web language learning webapp I am building to help me pick up Spanish.</p>          
         </div>
       </div>
