added github link

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <!-- demo only -->
   <meta name="robots" content="noindex,nofollow">
-  <title>Viksit Arora - Resume &amp; Portfolio</title>
+  <title>Viksit Arora - Resume</title>
   <!-- Styles
   ================================================== -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/bootstrap.css">
@@ -30,7 +30,7 @@
       <div class="col-md-12">
         <img height="175px" width="190px" class="my-picture" src="viksit.jpg" alt="Photo of Viksit Arora">
         <h1 class="my-name">Viksit Arora</h1>
-        <h2 class="my-profession">Web Developer<a class="github-link" href=""><i class="fa fa-github"></i>enliven-</a></h2>
+        <h2 class="my-profession">Web Developer<a class="github-link" href="https://github.com/enliven-?tab=repositories"><i class="fa fa-github"></i>enliven-</a></h2>
         <p class="my-message">An ambitious problem solver with a passion for web application development. Having worked as a freealnce software developer for the last few years, I have developed the requisite expertise to design and execute complex software projects for a diverse variety of users. I am a pretty positive person, and absolutely love traveling and teaching!</p>
         </div>
 
