added full stops

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -52,11 +52,11 @@
 
         <h4 class="my-activity">Tau Beta Pi Fellowship </h4>
         <h5 class="my-venture">Golden Hour Ambulance Service</h5>
-        <p class="my-specifics">Very competitive MIT public service project fellowship. Proposed Uber like tracking for ambulances in India. Responsible for idea generation, implementing the backend and part of frontend</p>
+        <p class="my-specifics">Very competitive MIT public service project fellowship. Proposed Uber like tracking for ambulances in India. Responsible for idea generation, implementing the backend and part of frontend.</p>
 
         <h4 class="my-activity">Chief Lead, Suspension</h4><!-- <span>Jan'14</span> -->
         <h5 class="my-venture">MIT VDS</h5>
-        <p class="my-specifics">Vehicle Design Summit was a student lead initiative to make a smaller, greener and a more efficient car (Vision100) for developing econimies like India. Responsible for an in-depth trade-study of suspension technologies. Worked on refining trade-study process for future use by MIT VDS </p>
+        <p class="my-specifics">Vehicle Design Summit was a student lead initiative to make a smaller, greener and a more efficient car (Vision100) for developing econimies like India. Responsible for an in-depth trade-study of suspension technologies. Worked on refining trade-study process for future use by MIT VDS. </p>
 
         <h4 class="my-activity">Research Associate</h4><!-- <span>Jan'14</span> -->
         <h5 class="my-venture">Smart Cities, MIT Media Lab</h5>
@@ -70,7 +70,7 @@
 
         <h4 class="my-activity">Software Engineer Intern</h4>
         <h5 class="my-venture">Amazon<span>May'13 - Aug'13</span></h5>
-        <p class="my-specifics">Part of the Search & Discovery team. Worked on an in-beta service that helps in improving search results by integrating amazon-facebook-connect information with regular search algorithms. Additionally, setup an in-house graphing tool to help monitor user authentication statistics</p>
+        <p class="my-specifics">Part of the Search & Discovery team. Worked on an in-beta service that helps in improving search results by integrating amazon-facebook-connect information with regular search algorithms. Additionally, setup an in-house graphing tool to help monitor user authentication statistics.</p>
 
         <h4 class="my-activity">Full Stack Developer</h4>
         <h5 class="my-venture">MIT Sloan StartUp<span>Feb'13 - May'13</span></h5>
@@ -78,7 +78,7 @@
 
         <h4 class="my-activity">Consultant & Backend Developer</h4>
         <h5 class="my-venture">Oroeco Inc.<span>Dec'12 - Feb'13</span></h5>
-        <p class="my-specifics">Oroeco is Stanford based startup that helps you make better buying choices with respect to environmental impact. Responsible for implementing various parts of the web app including authentication system and feedback form; and extensive testing with rspec and capybara</p>
+        <p class="my-specifics">Oroeco is Stanford based startup that helps you make better buying choices with respect to environmental impact. Responsible for implementing various parts of the web app including authentication system and feedback form; and extensive testing with rspec and capybara.</p>
 
       </div>
       <!-- column 3 -->
