--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -236,7 +236,7 @@
         <div class="portfolio-details">
           <h4>bhushan-delivers</h4>
           <img width="250px" height="" src="bhushandelivers.png" alt="image description">
-          <p>Building a cool interface for grocery shopping experience that mostly entails getting things on a list.</p>
+          <p>Building a cool interface for grocery shopping like experiences that mostly entail getting things on a list.</p>
         </div>
       </div>
       
@@ -244,7 +244,7 @@
         <div class="portfolio-details">
           <h4>translatr</h4>
           <img width="250px" height="" src="translatr.png" alt="image description">
-          <p>translatr is web language learning webapp I am building to help me pick up Spanish.</p>          
+          <p>translatr is web based language learning app I am building to help me pick up Spanish.</p>          
         </div>
       </div>
 
