updated pic, and some minor changes in text

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -28,9 +28,9 @@
     ================================================== -->
     <div class="row heading">
       <div class="col-md-12">
-        <img height="175px" width="190px" class="my-picture" src="viksit.jpg" alt="Photo of Viksit Arora">
+        <img height="175px" width="190px" class="my-picture" src="viksit_new.jpg" alt="Photo of Viksit Arora">
         <h1 class="my-name">Viksit Arora</h1>
-        <h2 class="my-profession">Web Developer<a class="github-link" href="https://github.com/enliven-?tab=repositories"><i class="fa fa-github"></i>enliven-</a></h2>
+        <h2 class="my-profession">Developer<a class="github-link" href="https://github.com/enliven-?tab=repositories"><i class="fa fa-github"></i>enliven-</a></h2>
         <p class="my-message">An ambitious problem solver with a passion for web application development. Having worked as a freealnce software developer for the last few years, I have developed the requisite expertise to design and execute complex software projects for a diverse variety of users. I am a pretty positive person, and absolutely love traveling and teaching!</p>
         </div>
 
@@ -43,10 +43,9 @@
       <div class="col-md-4">
         
         <h3 class="my-caption">Education</h3>
-        <h4 class="my-activity">B.S. in Computer Science & <br/>
-        Mechanical Engineering</h4>
+        <h4 class="my-activity">B.S. Electrical Engineering & Computer Science<br/></h4>
 
-        <h5 class="my-venture">MIT <span>June '15</span></h5>
+        <h5 class="my-venture">MIT, Cambridge<span>June '16</span></h5>
 
         <h3 class="my-caption">Research Projects & Fellowships</h3>
 
@@ -74,7 +73,7 @@
 
         <h4 class="my-activity">Full Stack Developer</h4>
         <h5 class="my-venture">MIT Sloan StartUp<span>Feb'13 - May'13</span></h5>
-        <p class="my-specifics">MIT Sloan funded early stage start up that connects artisans in India with buyers in countries like the U.S. Implemented the minimal viable product with features including but not limited to authentication system, cataloging system and a linear version controlled design editing tool.</p>
+        <p class="my-specifics">MIT Sloan funded early stage start up that connects artisans in India with buyers in countries like the U.S. Implemented the minimal viable product with features including but not limited to authentication system, content management system and a linear version controlled design editing tool.</p>
 
         <h4 class="my-activity">Consultant & Backend Developer</h4>
         <h5 class="my-venture">Oroeco Inc.<span>Dec'12 - Feb'13</span></h5>
@@ -131,7 +130,7 @@
         </h4>
 
         <h4 class="my-skill">
-          Javascript &amp; jQuery
+          Javascript
           <span>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -174,16 +173,6 @@
           </span>
         </h4>
         <h4 class="my-skill">
-          Padrino
-          <span>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-o"></i>
-            <i class="fa fa-star-o"></i>
-          </span>
-        </h4>
-        <h4 class="my-skill">
           Django
           <span>
             <i class="fa fa-star"></i>
@@ -195,6 +184,16 @@
         </h4>
         <h4 class="my-skill">
           Flask
+          <span>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star-o"></i>
+            <i class="fa fa-star-o"></i>
+          </span>
+        </h4>
+        <h4 class="my-skill">
+          BackboneJS
           <span>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
@@ -228,7 +227,7 @@
         <div class="portfolio-details">
           <h4>task-it</h4>
           <img width="250px" height="" src="taskit.png" alt="image description">
-          <p>task-it is place to list and grab tasks for money or other favors amongst closed knit communities. Building a mvp for a friend.</p>
+          <p>task-it is place to list and grab tasks for money or other favors amongst closed knit communities. Building a MVP for a friend.</p>
         </div>
       </div>
       
@@ -266,23 +265,17 @@
       <div class="col-md-4">
         <h3 class="my-caption">Contact Me</h3>
         <h4 class="my-info">
-          <i class="fa fa-phone"></i> Phone
-          <span>+91-9779860223</span>
+          <i class="fa fa-phone"></i> Mobile
+          <span>+91-9156420350</span>
         </h4>
         <h4 class="my-info">
-          <i class="fa fa-mobile"></i>&nbsp; &nbsp; Cell
+          <i class="fa fa-phone"></i> Mobile (U.S.)
           <span>+1-949-484-5748</span>
         </h4>
         <h4 class="my-info">
           <i class="fa fa-envelope"></i> Email
           <span>
             <a href="mailto:viksit@mit.edu">viksit@mit.edu</a>
-          </span>
-        </h4>
-        <h4 class="my-info">
-          <i class="fa fa-globe"></i> Website / Blog
-          <span>
-            <a href="#" target="_blank">www.aboutme.io/viksit</a>
           </span>
         </h4>
       </div>
